Fix item description formatting, take two (NormalPerson7, #11632)
Using 'pre-wrap' here instead of 'pre', which was causing some
descriptions to be clipped, since their description text was unwrapped.

--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -589,6 +589,7 @@ body {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
+    white-space: pre-wrap;
 }
 .describe-item > .actions {
     margin-top: 15px;
